2009-03-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourceview.c:
	Do not get the backward char if we are at the beginning
	of the line.

2009-03-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/c-indenter.c:
	Pass the backward iter when calculating the indent level.	

2009-03-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/c-indenter.c:
	Do not reinvent the wheel when checking case labels.

2009-03-07  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/c-indenter.c:
	Manage indentation and relocations in switch ().

2009-03-06  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/c-indenter.c:
	Add right indentation in case labels.

2009-03-05  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/simple-indenter.c:
	Use gint instead of gfloat for indentation level.

	* gtksourceview/gtksourceview.c:
	If we have any indentation when we press \n delete it 
	before insert the new indentation.

2009-03-02  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/c-indenter.c:
	* gtksourceview/gtksourceindenter-utils.c:
	* gtksourceview/gtksourceindenter.c:
	* gtksourceview/gtksourceview.c:
	* gtksourceview/gtksourceindenter-utils.h:
	* gtksourceview/gtksourceindenter.h:
	Clean up the source code and change from the gfloat approach
	to a gint approach when getting the indent level.

2009-03-01  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourceindentermanager.c:
	* gtksourceview/gtksourceindenter-utils.c:
	* gtksourceview/gtksourceview.c:
	* gtksourceview/gtksourceindenter-utils.h:
	* tests/test-widget.c:
	Fix compilation warnings.

2009-03-01  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/c-indenter.c:
	Get the right indent level when having something like:
	if (true)
		hello ();

	* gtksourceview/gtksourceview.c:
	Fix a false positive when checking whitespaces.
