@@ -1,3 +1,11 @@
+2009-03-11  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gtksourceview/c-indenter.c:
+	* gtksourceview/gtksourceindenter-utils.c:
+	* gtksourceview/gtksourceindenter-utils.h:
+	Skip preprocessor sentences when looking for the level.
+	Do not indent when we have something like var =\n
+
 2009-03-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
 	* gtksourceview/gtksourceview.c:
